--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ footer {
 
 .header-image {
     height: 697px;
-    background: url('../images/header.jpg') center center;
+    background: url('../img/header.jpg') center center;
     background-size: cover;
     clear: both;
 }
@@ -159,14 +159,14 @@ footer {
 .skills-image {
     margin-top: -100px;
     height: 213px;
-    background: url('../images/skills.jpg') center center;
+    background: url('../img/skills.jpg') center center;
     background-size: cover;
     clear: both;
 }
 
 .contact-image {
     height: 906px;
-    background: url('../images/contact.jpg') center center;
+    background: url('../img/contact.jpg') center center;
     background-size: cover;
     clear: both;
 }
@@ -174,7 +174,7 @@ footer {
 .logo {
     height: 61px;
     width: 48px;
-    background: url(../images/logo.jpg);
+    background: url(../img/logo.jpg);
     float: left;
     margin: 10px 0 10px 0;
 }
