--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,8 @@ footer {
 }
 
     .download-cv:hover {
-        text-decoration: underline;
+        background-color: #0e715f;
+        color:white;
     }
 
 .top-margin {
